--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.1",
     "next": "13.4.12",
+    "nextjs-toploader": "^1.4.2",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-hook-form": "^7.45.2",
+    "react-icons": "^4.10.1",
+    "tailwindcss": "3.3.3",
+    "validator": "^13.9.0",
+    "yup": "^1.2.0"
   }
 }
